# ferrux_canvas

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: publish.yml
examples/winit_example/: Cargo.toml  README.md
examples/winit_example/src/: main.rs
src/: lib.rs  main.rs
src/canvas/: canvas.rs  canvas_error.rs  canvas_trait.rs  helpers.rs  math.rs  mod.rs  pixel.rs  point.rs  winit.rs
src/color/: color.rs  color_builder.rs  color_error.rs  mod.rs  palette.rs  rgba_color.rs
