[package]
name = "ferrux_canvas"
description = "Abstraction tool to ease the use of the Pixels buffer"
version = "0.3.2"
authors = ["Soto Estévez <ricardo@sotoestevez.dev>"]
edition = "2021"
readme = "./README.md"
homepage = "https://crates.io/crates/ferrux_canvas"
repository = "https://github.com/kriogenia/ferrux_canvas"
documentation = "https://docs.rs/ferrux_canvas/latest"
license = "MIT OR Apache-2.0"
keywords = [ "canvas", "pixels", "graphics", "2D" ]
categories = [ "graphics", "rendering" ]
include = [
    "/Cargo.*",
    "/LICENSE-*",
    "/README.md",
    "/src/**/*",
]

[features]
optimize = ["log/release_max_level_warn"]
default = ["optimize"]

[dependencies]
bresenham_zip = "1.0.0"
env_logger = "0.9"
line_drawing = "1.0.0"
log = "0.4"
pixels = "0.9"
regex = "1.5.5"
winit = "0.26"

[workspace]
members = [
    "examples/*"
]
